--- a/app/pom.xml
+++ b/app/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>bonita-actorfilter-initiator</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.bonitasoft.actorfilter</groupId>
+      <artifactId>bonita-actorfilter-initiator-manager</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
